--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,12 @@
 {% extends "base.html" %} {% block content %}
 <div class="container-homepage">
     <div id="homepage-content">
-        <h1>Hello World</h1>
-        <p>Join the fastest growing cullinary network in Australia</p>
-        <p>test</p>
+        <h3>Where Hospitality Meets Networking</h3>
+        <p>
+            Connect with like minded industry professionals on one of the
+            fastest growing cullinary networks in Australia.
+        </p>
+        <a href="/signup" id="homepage-signup-button">Sign Up Now</a>
     </div>
 </div>
 {% include 'footer.html' %}{% endblock %}
