--- a/templates/main.html
+++ b/templates/main.html
@@ -3,19 +3,33 @@
 {% block content %}
 <main id="main-main">
     <div id="main-content">
-    {% with messages = get_flashed_messages() %} {% if messages %}
+    <!-- {% with messages = get_flashed_messages() %} {% if messages %}
         <ul class="flashes">
             {% for message in messages %}
             <li>{{ message }}</li>
             {% endfor %}
         </ul>
-        {% endif %} {% endwith %}
+        {% endif %} {% endwith %} -->
+    <div id="main-post-header">
+        <form action="/filter" method="post">
+            <label for="category">Filter by Category</label>
+            <select name="filter" id="filter">
+                <option value="general">General</option>
+                <option value="jobs">Jobs</option>
+                <option value="advice">Advice</option>
+                <option value="for-sale">For Sale</option>
+            </select>
+            <button type="submit">Filter</button>
+        </form>
+    </div>
     {% for post in posts%}
     <section class="user-post">
-        <img id="user-post-avatar" src="{{post[7]}}" alt="avatar" height="100px" width="100px"/>
+        <img class="user-post-avatar" src="{{post[7]}}" alt="avatar" height="100px" width="100px"/>
         <div class="user-post-body">
             <h3 class="user-post-username"><a href="">{{post[4]}} {{post[5]}}</a></h5>
             <p>Date Submitted: {{ post[2] }} </p>
+            <p>Location: {{ post[6] }} </p>
+            <p>Category: {{ post[3] }} </p>
             <p class="user-post-content">{{ post[1] }}</p>
             {% if session['user_id'] == post[0] %}
             <form action="/post/delete" method="POST">
@@ -28,17 +42,22 @@
     {% endfor%}
     <button class="collapsible"> Click here to make a post</button>
     <div id="create-post-box">
-        <form action="/post/create" method="POST">
+        <form action="/post/create" method="POST" id="create-post-box-form">
             <div>
-                <label for="make-post">Make a Post</label>
+                <h4>Make a Post</h4>
                 <textarea name="post-content" id="post-content" cols="30" rows="10"></textarea>
             </div>
             <div>
-                <label for="category">Category</label>
-                <input type="text" name="category" id="post-category" />
+            <select name="category" id="category">
+                <option value="">Select a Category</option>
+                <option value="general">General</option>
+                <option value="jobs">Jobs</option>
+                <option value="advice">Advice</option>
+                <option value="for-sale">For Sale</option>
+            </select>
             </div>
             <div>
-                <button type="submit">Submit</button>
+                <button type="submit" id="post-submit-btn">Submit</button>
             </div>
         </form>
     </div>
