Update CSS, Ability to Filter Posts

--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -36,7 +36,7 @@
                 </div>
             </form>
             <div id="login-signup-link">
-                <a href="/signup"
+                <a href="/signup" id="login-signup-link-a"
                     >Don't have an account? Click here to sign up</a
                 >
             </div>
