--- a/static/styles.css
+++ b/static/styles.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-    background-color: rgb(251, 246, 238);
+    background-color: rgb(255, 255, 255);
     margin: 0;
     min-height: 100%;
 }
@@ -31,9 +31,12 @@ header {
     flex-wrap: wrap;
     align-items: center;
     gap: 5px;
+    cursor: pointer;
 }
 #logo-title {
     font-size: 1.5em;
+    user-select: none;
+
 }
 header h3 {
     margin: 0;
@@ -50,20 +53,22 @@ header h3 {
     flex-direction: row;
     align-content: center;
     gap: 15px;
+    font-size: 1.2em;
 }
 #navbar a {
     transition-duration: 0.3s;
 }
-footer {
+#footer {
     text-align: center;
     margin: 20px auto 0;
 }
+
 #attributions {
     margin-top: 5px;
 }
 a:link {
     text-decoration: none;
-    color: rgb(0, 0, 0);
+    color: rgb(0, 43, 128);
     
 }
 a:visited {
@@ -71,7 +76,7 @@ a:visited {
     color: rgb(0, 0, 0);
 }
 a:hover {
-    color: rgb(181, 181, 181);
+    color: rgb(0, 142, 132);
 }
 /************************************************************/
 /************************************************************/
@@ -111,11 +116,13 @@ a:hover {
 #homepage-signup-button {
     border-radius: 20px;
     font-size: 0.5em;
-    background-color: blanchedalmond;
-    padding: 5% 10%;
+    background-color: rgb(253, 224, 177);
+    padding: 2% 7%;
+    transition-duration: 0.3s;
 }
 #homepage-signup-button:hover {
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 191, 88, 0.763);
+    color: rgb(255, 255, 255);
 }
 .flashes {
     list-style-type: none;
@@ -143,9 +150,9 @@ a:hover {
 }
 
 #main-content {
-    width: 60%;
-    height: 800px;
-    /* background-color: rgba(240, 240, 240, 0.8); */
+    width: 100%;
+    height: 100%;
+    min-height: 850px;
     background-color: rgba(240, 240, 240,0.9);
     margin: auto;
     display: flex;
@@ -160,21 +167,28 @@ section {
    rgba(0, 0, 0, 0.5);
    padding: 3%;
    margin: 5px auto;
-   width: 70%;
+   width: 50%;
 }
 .user-post {
     display: flex;
     flex-direction: row;
     gap: 50px;
 }
+.user-post-details  {
+    font-size: 0.8em;
+}
+.user-post-bold {
+    font-weight: 600;
+}
 
 .user-post-body {
     display: flex;
     flex-direction: column;
+    width: 40%;
 }
 .user-post-avatar {
     border-radius: 50%;
-    background-color: rgb(149, 175, 255);
+    background-color: rgb(253, 224, 177);
 }
 .user-post-username {
     margin: 0;
@@ -183,6 +197,13 @@ section {
     margin: 0 0 5px 0;
     flex-direction: row;
     color: rgb(62, 62, 62);
+}
+.thin-line {
+    width: 100%;
+    height: 1px;
+    background: rgb(0, 0, 0);
+    /* border: 1px solid rgb(0, 0, 0); */
+    margin-bottom: 3px;
 }
 .user-post-content {
     color: rgb(0, 0, 0);
@@ -199,7 +220,7 @@ section {
     cursor: pointer;
 }
 .collapsible {
-    background-color: rgba(149, 175, 255, 0.9);
+    background-color: rgba(253, 224, 177,0.9);
     color: #444;
     cursor: pointer;
     padding: 8px;
@@ -214,7 +235,7 @@ section {
 }
 .active,
 .collapsible:hover {
-    background-color: rgb(37, 67, 218);
+    background-color: rgb(255, 204, 121);
     color: rgb(255, 255, 255);
 }
 .collapsible:after {
@@ -267,11 +288,12 @@ section {
 
  #login-block {
      border-radius: 25px;
-     background-color: rgba(255, 255, 255, 0.8);
+     background-color: rgb(255, 255, 255);
      height: 300px;
      width: 300px;
      align-self: center;
      padding: 15px;
+     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
  }
  #login-header {
      text-align: center;
@@ -289,8 +311,16 @@ section {
 }
 #login-btn {
     margin: 3px auto;
-    width: 50%;
-    
+    width: 100%;
+    padding: 4px;
+    background: rgba(255, 191, 88);
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+}
+#login-btn:hover {
+    background: rgb(255, 164, 17);
+    color: rgb(255, 255, 255);
 }
 #login-signup-link {
     width: 50%;
@@ -299,6 +329,10 @@ section {
 }
 #login-signup-link a {
     color: rgb(25, 59, 206);
+    transition-duration: 0.3s;
+}
+#login-signup-link-a:hover {
+    color: rgb(0, 33, 98);
 }
 #login-main {
     background-image: url('/static/images/background-image-3.jpeg');
@@ -313,7 +347,8 @@ section {
 }
 #backdrop {
     width: 100%;
-    backdrop-filter: blur(7px) grayscale(0.4);
+    background-color: rgba(35, 35, 35, 0.6);
+    backdrop-filter: blur(7px);
     display: flex;
     flex-direction: row;
     align-content: center;
@@ -343,14 +378,24 @@ section {
 /************************************************************/
 /************************************************************/
 
+#signup-backdrop {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+}
 #signup-block {
     border-radius: 25px;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgb(255, 255, 255);
     height: auto;
     width: 450px;
     align-self: center;
     padding: 20px;
     text-align: center;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 #signup-form-flex {
     display: flex;
@@ -378,13 +423,20 @@ section {
 .signup-btn-div {
     padding: 0 20%;
     margin: 0 auto;
-
 }
 
 #signup-btn {
     margin: 10px auto;
     width: 200px;
     height: 50px;
+    background: rgba(255, 191, 88);
+    transition-duration: 0.3s;
+    border-radius: 10px;
+    font-size: 1.2em;
+}
+#signup-btn:hover {
+    background-color: rgba(255, 191, 88, 0.763);
+    cursor: pointer;
 }
 
 #signup-signup-link {
@@ -400,10 +452,7 @@ section {
     background-image: url('/static/images/background-image-2.jpeg');
     background-size: cover;
     background-position: center;
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-    justify-content: center;
+   
     height: 800px;
 }
 
@@ -421,10 +470,29 @@ section {
 }
 #avatar-select {
     width: 80%;
+    flex-grow: 2;
     justify-self: center;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content:space-evenly;
+    row-gap: 3px;
+    column-gap: 30px;
+}
+#avatar-select input {
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+#avatar-select label {
+    cursor: pointer;
+    filter: grayscale(90%);
+}
+#avatar-select label:hover {
+    filter: grayscale(0);
+}
+#avatar-select input[type="radio"]:checked+label {
+    filter: grayscale(0);
 }
 #avatar-select img {
     width: 60px;
