--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,12 @@
         <title>{% block title %}{% endblock %}</title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <!-- <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+            crossorigin="anonymous"
+        /> -->
         <link rel="stylesheet" href="/static/styles.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,7 +22,7 @@
     </head>
     <body>
         <header>
-            <div id="logo">
+            <div id="logo" onclick="location.href='/home';">
                 <img id="logo-img" src="/static/images/logo.png" alt="Logo" />
                 <h3 id="logo-title">Culinary Corner</h3>
             </div>
