--- a/templates/main.html
+++ b/templates/main.html
@@ -1,35 +1,34 @@
-{% extends "base.html" %}
-{% if session['user_id'] %} 
-{% block content %}
+{% extends "base.html" %} {% if session['user_id'] %} {% block content %}
 <main id="main-main">
     <div id="main-content">
-    <!-- {% with messages = get_flashed_messages() %} {% if messages %}
+        <!-- {% with messages = get_flashed_messages() %} {% if messages %}
         <ul class="flashes">
             {% for message in messages %}
             <li>{{ message }}</li>
             {% endfor %}
         </ul>
         {% endif %} {% endwith %} -->
-    <div id="main-post-header">
-        <form action="/filter" method="post">
-            <label for="category">Filter by Category</label>
-            <select name="filter" id="filter">
-                <option value="general">General</option>
-                <option value="jobs">Jobs</option>
-                <option value="advice">Advice</option>
-                <option value="for-sale">For Sale</option>
-            </select>
-            <button type="submit">Filter</button>
-        </form>
-    </div>
-    {% for post in posts%}
+        <div id="main-post-header">
+            <form action="/home" method="post">
+                <select name="filter" id="filter">
+                    <option value="">Filter by Category</option>
+                    <option value="all">All</option>
+                    <option value="general">General</option>
+                    <option value="jobs">Jobs</option>
+                    <option value="advice">Advice</option>
+                    <option value="for-sale">For Sale</option>
+                </select>
+                <button type="submit">Filter</button>
+            </form>
+        </div>
+        {% for post in posts%}
     <section class="user-post">
         <img class="user-post-avatar" src="{{post[7]}}" alt="avatar" height="100px" width="100px"/>
         <div class="user-post-body">
             <h3 class="user-post-username"><a href="">{{post[4]}} {{post[5]}}</a></h5>
-            <p>Date Submitted: {{ post[2] }} </p>
-            <p>Location: {{ post[6] }} </p>
-            <p>Category: {{ post[3] }} </p>
+            <p class="user-post-details"><span class="user-post-bold">Submitted: </span>{{ post[2] }} </p>
+            <p class="user-post-details"><span class="user-post-bold">Location: </span>{{ post[6] }} <span class="user-post-bold">Category: </span>{{ post[3] }} </p>
+            <div class="thin-line"></div>
             <p class="user-post-content">{{ post[1] }}</p>
             {% if session['user_id'] == post[0] %}
             <form action="/post/delete" method="POST">
@@ -40,28 +39,32 @@
         </div>
     </section>
     {% endfor%}
-    <button class="collapsible"> Click here to make a post</button>
-    <div id="create-post-box">
-        <form action="/post/create" method="POST" id="create-post-box-form">
-            <div>
-                <h4>Make a Post</h4>
-                <textarea name="post-content" id="post-content" cols="30" rows="10"></textarea>
-            </div>
-            <div>
-            <select name="category" id="category">
-                <option value="">Select a Category</option>
-                <option value="general">General</option>
-                <option value="jobs">Jobs</option>
-                <option value="advice">Advice</option>
-                <option value="for-sale">For Sale</option>
-            </select>
-            </div>
-            <div>
-                <button type="submit" id="post-submit-btn">Submit</button>
-            </div>
-        </form>
-    </div>
+        <button class="collapsible">Click here to make a post</button>
+        <div id="create-post-box">
+            <form action="/post/create" method="POST" id="create-post-box-form">
+                <div>
+                    <h4>Make a Post</h4>
+                    <textarea
+                        name="post-content"
+                        id="post-content"
+                        cols="30"
+                        rows="10"
+                    ></textarea>
+                </div>
+                <div>
+                    <select name="category" id="category">
+                        <option value="">Select a Category</option>
+                        <option value="general">General</option>
+                        <option value="jobs">Jobs</option>
+                        <option value="advice">Advice</option>
+                        <option value="for-sale">For Sale</option>
+                    </select>
+                </div>
+                <div>
+                    <button type="submit" id="post-submit-btn">Submit</button>
+                </div>
+            </form>
+        </div>
     </div>
 </main>
-{% endblock %}
-{% endif %}
+{% endblock %} {% endif %}
