--- a/static/styles.css
+++ b/static/styles.css
@@ -52,12 +52,57 @@ header h3 {
     display: flex;
     flex-direction: row;
     align-content: center;
+    align-items: center;
     gap: 15px;
     font-size: 1.2em;
 }
 #navbar a {
     transition-duration: 0.3s;
 }
+#nav-user-profile {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+    user-select: none;
+    cursor: pointer;
+}
+#nav-profile-avatar {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid black;
+    padding: 4px;
+    margin: 8px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    top: 80px;
+    right: 20px;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 0;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd
+}
+
+.show {
+    display: block;
+
+}
+
 #footer {
     text-align: center;
     margin: 20px auto 0;
@@ -160,16 +205,13 @@ a:hover {
     overflow: scroll;
 }
 
-section {
-   border-radius: 15px;
-   background: rgb(255, 247, 235);
-   box-shadow: 2px 2px 2px
-   rgba(0, 0, 0, 0.5);
-   padding: 3%;
-   margin: 5px auto;
-   width: 50%;
-}
 .user-post {
+    border-radius: 15px;
+    background: rgb(255, 247, 235);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+    padding: 3%;
+    margin: 5px auto;
+    width: 50%;
     display: flex;
     flex-direction: row;
     gap: 50px;
@@ -497,4 +539,10 @@ section {
 #avatar-select img {
     width: 60px;
     height: 60px;
-    }
+}
+
+/************************************************************/
+/************************************************************/
+                    /* Profile Page */
+/************************************************************/
+/************************************************************/
