--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,6 @@
         <title>{% block title %}{% endblock %}</title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <!-- <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-            crossorigin="anonymous"
-        /> -->
         <link rel="stylesheet" href="/static/styles.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,16 +22,26 @@
             </div>
             <nav id="navbar">
                 {% if session['user_id'] %}
+
                 <div>
                     <a href="/home">Home</a>
                 </div>
                 <div>
-                    <a href="/profile">My Profile</a>
+                    <a href="/profile/{{session['user_id']}}">My Profile</a>
                 </div>
                 <div>
                     <a href="/sessions/delete">Logout</a>
                 </div>
+                <div id="nav-user-profile" onclick="dropDown()">
+                    {% block user %} {% endblock %}
+                    <div id="myDropdown" class="dropdown-content">
+                        <a href="/posts">My Posts</a>
+                        <a href="/profile/{{session['user_id']}}">My Profile</a>
+                        <a href="/sessions/delete">Logout</a>
+                    </div>
+                </div>
                 {% else %}
+
                 <div>
                     <a href="/">Home</a>
                 </div>
