--- a/templates/main.html
+++ b/templates/main.html
@@ -1,10 +1,8 @@
-{% extends "base.html" %} {% if session['user_id'] %} 
-{% block user %}
-<img src="{{ session['avatar'] }}" alt="" id="nav-profile-avatar">
+{% extends "base.html" %} {% if session['user_id'] %} {% block user %}
+<img src="{{ session['avatar'] }}" alt="" id="nav-profile-avatar" />
 <p>{{ session['user_name']}}</p>
-{% endblock %}
-{% block content %}
-<main id="main-main">
+{% endblock %} {% block content %}
+<main class="main-main">
     <div id="main-content">
         <div id="main-post-header">
             <form action="/home" method="post">
@@ -19,24 +17,8 @@
                 <button type="submit">Filter</button>
             </form>
         </div>
-        {% for post in posts%}
-    <section class="user-post">
-        <img class="user-post-avatar" src="{{post[7]}}" alt="avatar" height="100px" width="100px"/>
-        <div class="user-post-body">
-            <h3 class="user-post-username"><a href="/profile/{{post[0]}}">{{post[4]}} {{post[5]}}</a></h5>
-            <p class="user-post-details"><span class="user-post-bold">Submitted: </span>{{ post[2] }} </p>
-            <p class="user-post-details"><span class="user-post-bold">Location: </span>{{ post[6] }} <span class="user-post-bold">Category: </span>{{ post[3] }} </p>
-            <div class="thin-line"></div>
-            <p class="user-post-content">{{ post[1] }}</p>
-            {% if session['user_id'] == post[0] %}
-            <form action="/post/delete" method="POST">
-                <input type="hidden" name="id" value="{{ post[8] }}">
-                <button type="submit" id="user-post-delete">Delete</button>
-            </form>
-            {% endif %}
-        </div>
-    </section>
-    {% endfor%}
+        {% block posts %} {% include 'post-feed.html'%} {% include
+        'page-select.html' %} {% endblock %}
         <button class="collapsible">Click here to make a post</button>
         <div id="create-post-box">
             <form action="/post/create" method="POST" id="create-post-box-form">
