--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -18,19 +18,24 @@
                 <div id="signup-form-flex">
                     <div class="signup-inputs">
                         <label for="fName">First Name</label>
-                        <input type="text" id="fName" name="fName" />
+                        <input type="text" id="fName" name="fName" required />
                     </div>
                     <div class="signup-inputs">
                         <label for="lName">Last Name</label>
-                        <input type="text" id="lName" name="lName" />
+                        <input type="text" id="lName" name="lName" required />
                     </div>
                     <div class="signup-inputs">
                         <label for="email">Email</label>
-                        <input type="text" id="email" name="email" />
+                        <input type="email" id="email" name="email" required />
                     </div>
                     <div class="signup-inputs">
                         <label for="password">Password</label>
-                        <input type="password" id="password" name="password" />
+                        <input
+                            type="password"
+                            id="password"
+                            name="password"
+                            required
+                        />
                     </div>
                     <div class="signup-inputs">
                         <label for="location">Location</label>
@@ -39,6 +44,7 @@
                             id="location"
                             name="location"
                             value="{{location}}"
+                            required
                         />
                     </div>
                     <fieldset class="avatar-select">
